--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -25,6 +25,7 @@
   font-family: "Iosevka Aile", "JetBrainsMono Nerd Font";
   font-size: 12pt;
   padding-bottom: 1px;
+  padding-top: 1px;
 }
 
 tooltip {
